Add Parameter for SVR scaling